--- a/index.html
+++ b/index.html
@@ -1,37 +1,33 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8" />
+    <title>Dicee</title>
+    <link rel="stylesheet" href="styles.css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Indie+Flower|Lobster"
+      rel="stylesheet"
+    />
+  </head>
 
-<head>
-  <meta charset="utf-8">
-  <title>Dicee</title>
-  <link rel="stylesheet" href="styles.css">
-  <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Lobster" rel="stylesheet">
+  <body>
+    <div class="container">
+      <h1>Refresh Me</h1>
+      <h2>Refresh to Play!</h2>
 
-</head>
+      <div class="dice">
+        <p>Player 1</p>
+        <img class="img1" src="images/dice6.png" alt="dice-image" />
+      </div>
 
-<body>
-
-  <div class="container">
-    <h1>Refresh Me</h1>
-    <h2>Refresh to Play!</h2>
-
-    <div class="dice">
-      <p>Player 1</p>
-      <img class="img1" src="images/dice6.png" alt="dice-image">
+      <div class="dice">
+        <p>Player 2</p>
+        <img class="img2" src="images/dice6.png" alt="dice-image" />
+      </div>
     </div>
 
-    <div class="dice">
-      <p>Player 2</p>
-      <img class="img2" src="images/dice6.png" alt="dice-image">
-    </div>
+    <script src="index.js" charset="utf-8"></script>
+  </body>
 
-  </div>
-
-  <script src="index.js" charset="utf-8"></script>
-</body>
-
-<footer>
-  🎲 Mohammad Junaid Arif 🎲
-</footer>
-
+  <footer>🎲 Junaid Arif 🎲</footer>
 </html>
